# viewer

./: .gitignore  CONTRIBUTING.md  PKGBUILD  README.md  autobuild.xml  build.sh
.github/workflows/: build.yaml
indra/: CMakeLists.txt
indra/cmake/: 00-Common.cmake  APR.cmake  Audio.cmake  Boost.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  ConfigurePkgConfig.cmake  DepsBuild.cmake  FMODSTUDIO.cmake  FreeType.cmake  GLEXT.cmake  GLH.cmake  GLM.cmake  GStreamer10Plugin.cmake  Hunspell.cmake  ICU4C.cmake  LLCoreHttp.cmake  LLPhysicsExtensions.cmake  LLPrimitive.cmake  LLWindow.cmake  LibVLCPlugin.cmake  LibraryInstall.cmake  Linking.cmake  Meshoptimizer.cmake  Mikktspace.cmake  NDOF.cmake  OPENAL.cmake  OpenJPEG.cmake  OpenSSL.cmake  Prebuilt.cmake  TinyEXR.cmake  TinyGLTF.cmake  UI.cmake  UnixInstall.cmake  Variables.cmake  ViewerMiscLibs.cmake  VulkanGltf.cmake  WebRTC.cmake  (+3 more)
indra/llappearance/: CMakeLists.txt  lltexlayer.cpp  lltexlayerparams.cpp
indra/llaudio/: CMakeLists.txt  llaudioengine_fmodstudio.cpp  llaudioengine_openal.cpp  llaudioengine_openal.h  lllistener_openal.h
indra/llcharacter/: CMakeLists.txt
indra/llcommon/: CMakeLists.txt  hbxxh.cpp  llapr.h  llcoros.cpp  llfasttimer.cpp  llfasttimer.h  llmemory.h  llpreprocessor.h  llprocess.cpp  llprocess.h  llprocessor.cpp  llsdutil.cpp  llstring.h  llsys.cpp  llsys.h  llthreadsafequeue.h  lltimer.cpp  lluuid.cpp  stdtypes.h
indra/llcorehttp/: CMakeLists.txt  _httpoprequest.cpp  httpcommon.cpp
indra/llcrashlogger/: CMakeLists.txt
indra/llfilesystem/: CMakeLists.txt  lldir.cpp  lldir_linux.cpp  lldir_linux.h  lldir_mac.cpp
indra/llimage/: CMakeLists.txt  llimagejpeg.cpp
indra/llimagej2coj/: CMakeLists.txt  llimagej2coj.cpp
indra/llinventory/: CMakeLists.txt  llsettingsbase.cpp  llsettingssky.cpp  llsettingswater.cpp
indra/llmath/: CMakeLists.txt  llcalcparser.h  llmath.h  llsimdmath.h  llvolume.cpp
indra/llmeshoptimizer/: CMakeLists.txt  llmeshoptimizer.cpp
indra/llmessage/: CMakeLists.txt  lltemplatemessagebuilder.cpp  lltemplatemessagereader.cpp  lltemplatemessagereader.h
indra/llplugin/: CMakeLists.txt  llpluginclassmedia.cpp  llpluginclassmedia.h  llpluginsharedmemory.cpp
indra/llplugin/slplugin/: CMakeLists.txt  slplugin.cpp
indra/llprimitive/: CMakeLists.txt  lldaeloader.cpp  lldaeloader.h  llgltfmaterial.h  llmodel.cpp  llmodel.h  llprimitive.cpp  llprimtexturelist.cpp  llprimtexturelist.h
indra/llprimitive/llphysicsextensions/: CMakeLists.txt  LLConvexDecompositionStubImpl.cpp  LLConvexDecompositionStubImpl.h  LLPathingLibStubImpl.cpp  LLPathingLibStubImpl.h  LLPhysicsExtensionsStubImpl.cpp  LLPhysicsExtensionsStubImpl.h  llconvexdecomposition.cpp  llconvexdecomposition.h  llpathinglib.cpp  llpathinglib.h  llphysicsextensions.cpp  llphysicsextensions.h
indra/llrender/: CMakeLists.txt  llatmosphere.cpp  llcubemap.cpp  llcubemaparray.cpp  llfontfreetype.cpp  llfontfreetypesvg.cpp  llfontgl.cpp  llfontgl.h  llgl.cpp  llgl.h  llgldbg.cpp  llglheaders.h  llglslshader.cpp  llglslshader.h  llglstates.h  llimagegl.cpp  llpostprocess.cpp  llrender.cpp  llrender.h  llrender2dutils.cpp  llrendertarget.cpp  llshadermgr.cpp  llshadermgr.h  llvertexbuffer.cpp  llvertexbuffer.h
indra/llui/: CMakeLists.txt  llbadge.cpp  llflatlistview.cpp  llfocusmgr.cpp  llfocusmgr.h  lllineeditor.cpp  lllineeditor.h  lltexteditor.cpp  lltexteditor.h  llui.cpp  llview.cpp  llview.h
indra/llwebrtc/: CMakeLists.txt  llwebrtc.cpp  llwebrtc_impl.h
indra/llwindow/: CMakeLists.txt  llkeyboard.cpp  llkeyboard.h  llkeyboardheadless.cpp  llkeyboardheadless.h  llkeyboardsdl.cpp  llkeyboardsdl.h  llopenglview-objc.mm  llwindow.cpp  llwindow.h  llwindowcallbacks.cpp  llwindowcallbacks.h  llwindowmacosx.cpp  llwindowsdl.cpp  llwindowsdl.h  llwindowwin32.cpp
indra/llxml/: CMakeLists.txt  llxmlnode.cpp  llxmltree.cpp
indra/media_plugins/: CMakeLists.txt
indra/media_plugins/base/: CMakeLists.txt  media_plugin_base.cpp  media_plugin_base.h
indra/media_plugins/cef/: CMakeLists.txt
indra/media_plugins/cef/linux/: volume_catcher_linux.cpp
indra/media_plugins/gstreamer10/: CMakeLists.txt
indra/media_plugins/libvlc/: CMakeLists.txt  media_plugin_libvlc.cpp
indra/newview/: CMakeLists.txt  FixBundle.cmake.in  FixPackage.cmake.in  Info-SecondLife.plist  PKGBUILD.in  SecondLife.nib  SecondLife.xib  ViewerInstall.cmake  featuretable_mac.txt  fsfloatersearch.cpp  gltfscenemanager.cpp  licenses-linux.txt  licenses-mac.txt  llagentcamera.cpp  llappviewer.cpp  llappviewerlinux.cpp  llappviewerlinux.h  llappviewerwin32.cpp  llattachmentsmgr.cpp  llattachmentsmgr.h  llavatarlist.cpp  llavatarlist.h  llavatarlistitem.cpp  llavatarlistitem.h  llavatarpropertiesprocessor.cpp  llavatarpropertiesprocessor.h  llchathistory.cpp  llconversationloglist.cpp  llconversationmodel.cpp  lldirpicker.cpp  lldirpicker.h  lldrawable.cpp  lldrawpool.cpp  lldrawpoolavatar.cpp  lldrawpoolbump.cpp  lldrawpoolsimple.cpp  lldrawpoolsky.cpp  lldrawpoolterrain.cpp  lldrawpooltree.cpp  lldrawpoolwater.cpp  (+109 more)
indra/newview/English.lproj/: InfoPlist.strings
indra/newview/app_settings/: commands.xml  settings.xml  settings_per_account.xml  toolbars.xml
indra/newview/app_settings/camera/: Rear.xml
indra/newview/app_settings/shaders/class1/avatar/: avatarSkinV.glsl
indra/newview/app_settings/shaders/class1/deferred/: aoUtil.glsl  deferredUtil.glsl  globalF.glsl  highlightF.glsl  (+3 more)
indra/newview/character/: attentions.xml
indra/newview/gltf/: asset.cpp  primitive.cpp
indra/newview/installers/darwin/: dmg-cleanup.applescript
indra/newview/installers/darwin/release-dmg/: _VolumeIcon.icns
indra/newview/linux_tools/: launch_url.sh  megapahit.desktop
indra/newview/skins/contrast/: colors.xml
indra/newview/skins/contrast/textures/: default_land_picture.j2c  default_profile_picture.j2c  textures.xml
indra/newview/skins/default/: colors.xml
indra/newview/skins/default/textures/: textures.xml
indra/viewer_components/login/: CMakeLists.txt
patches/: collada-dom-v2.3-r7.patch  collada-dom-v2.3-r8.patch
(+107 files in other folders)
